Implement homepage redirect to /opportunities/ - remove duplicate content

--- a/netlify.toml
+++ b/netlify.toml
@@ -6,6 +6,11 @@
   NODE_VERSION = "18"
 
 [[redirects]]
+  from = "/"
+  to = "/opportunities/"
+  status = 301
+
+[[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
