fix: match old working form config - use name='resume' and remove extra attributes

--- a/netlify.toml
+++ b/netlify.toml
@@ -10,5 +10,10 @@
   to = "/opportunities/"
   status = 301
 
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
+
 [context.production.environment]
   NODE_ENV = "production" 
