fix: add _redirects file + force redirect in netlify.toml for guaranteed homepage redirect

--- a/netlify.toml
+++ b/netlify.toml
@@ -9,6 +9,7 @@
   from = "/"
   to = "/opportunities/"
   status = 301
+  force = true
 
 [context.production.environment]
   NODE_ENV = "production" 
