feat: move opportunities content to homepage - eliminates redirect issues
- Homepage now serves opportunities content directly
- No more redirects needed = instant loading
- Existing /opportunities/ links redirect to /
- Follows design system architecture with reusable CSS classes
- Maintains navigation highlighting logic
- Clean, simple, professional solution

--- a/netlify.toml
+++ b/netlify.toml
@@ -6,8 +6,14 @@
   NODE_VERSION = "18"
 
 [[redirects]]
-  from = "/"
-  to = "/opportunities/"
+  from = "/opportunities"
+  to = "/"
+  status = 301
+  force = true
+
+[[redirects]]
+  from = "/opportunities/"
+  to = "/"
   status = 301
   force = true
 
